--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "react-transition-group": "4.4.5",
-    "sails-js": "0.1.8",
+    "sails-js": "^0.1.9",
     "sass": "1.69.1",
     "vite-plugin-checker": "0.7.2",
     "vite-plugin-node-polyfills": "0.22.0",
